--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:init": "psql -U postgres -f db/schema.sql",
     "db:seed": "psql -U postgres -f db/seed.sql",
-    "start": "nodemon server.js"
+    "start":  "npm run db:init && npm run db:seed && node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
