--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@hapi/iron": "^7.0.1",
+    "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -16,6 +17,7 @@
     "passport-local": "^1.0.0",
     "pg-promise": "^11.5.4",
     "router": "^1.3.8",
+    "salt-api": "^2.1.2",
     "uuid": "^9.0.1"
   }
 }
